k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-argocd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-argocd-project
  template:
    metadata:
      labels:
        app: simple-argocd-project
    spec:
      containers:
      - name: simple-argocd-project
        image: zaalgol/simple-argocd-project:latest
        imagePullPolicy: Always # will aoto refresh when images change
        ports:
        - containerPort: 5000
