k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: simple-argocd-project
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
