k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
spec:
  selector:
    app: postgres-db
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
